to the top btn updated

--- a/home.html
+++ b/home.html
@@ -240,6 +240,12 @@
     <div class="copyright">
         all right reseve to Seven technology.
     </div>
+    <!--to top button-->
+    <button onclick="topFunction()" id="myBtn" title="Goto top">
+        <i class="fas fa-chevron-up"></i>
+    </button>
+
+    <!--javascript link-->
     <script src="script.js"></script>
 </body>
 </html>
