--- a/home.html
+++ b/home.html
@@ -34,8 +34,8 @@
                 </marquee>
             </div>
         </div>
-        <p id="hamburger" onclick="hamburger()">
-            <i class="fa-solid fa-bars"></i>
+        <p id="hamburger">
+            <i class="fa-solid fa-bars" onclick="hamburger()"></i>
         </p>
         <div id="bottomsection">
             <p><a href="home.html">home</a></p> 
